--- a/thirdstage-react/package.json
+++ b/thirdstage-react/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "formik": "^2.4.5",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.4"
+    "react-router-dom": "6.4",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.39",
