--- a/thirdstage-react/package.json
+++ b/thirdstage-react/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "formik": "^2.4.5",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
