--- a/thirdstage-react/package.json
+++ b/thirdstage-react/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.1",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "node-sass": "^9.0.0",
